# tutorial_os

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README-JP.md  README-KO.md  README-ZH.md  README.ZH.md  README.md  build.bat  build.rs  build.sh  cargo.toml  commenting_assessment.md  docker-build.sh  docker-compose.yml  dockerignore  lib.rs  test.ps1  uart_log.txt
.cargo/: cargo.toml
.github/: FUNDING.yml
board/: README.md
board/lattepanda-iota/: board.mk  mkimage.py  mkimage.sh
board/lattepanda-mu/: board.mk  mkimage.py  mkimage.sh
board/libre-la-potato/: BOOT_FILES.md  board.mk
board/milkv-mars/: DEPLOY.md  board.mk  mkimage.sh  uEnv.txt
board/orangepi-rv2/: DEPLOY.md  board.mk  boot.cmd  env_k1-x.txt  mkimage.sh
board/pico2-lafvin/: board.mk
board/radxa-rock2a/: board.mk  boot.cmd  mkimage.sh
board/rpi-cm4-io/: board.mk
board/rpi-cm5-io/: board.mk
board/rpi-zero2w-gpi/: board.mk
boot/: README.md
boot/arm32/: vectors.S
boot/arm64/: cache.S  common_init.S  entry.S  vectors.S
boot/riscv64/: cache.S  common_init.S  entry.S  vectors.S
boot/x86_64/: cache.S  common_init.S  entry.S  vectors.S
common/: Cargo.toml  README.md  mem.rs  mmio.h  mmio.rs  string.c  types.h
common/src/: lib.rs  mmio.h  mmio.rs  string.h  types.h  types.rs
drivers/: Cargo.toml  README.md
drivers/audio/: audio.c  audio.h
drivers/framebuffer/: font_data.rs  framebuffer.c  framebuffer.h  framebuffer.rs
drivers/gpio/: gpio.c  gpio.h
drivers/mailbox/: mailbox.c  mailbox.h
drivers/sdcard/: sdhost.c  sdhost.h
drivers/src/: lib.rs
drivers/usb/: usb_host.c  usb_host.h
hal/: Cargo.toml  hal.h  hal_cpu.h  hal_cpu.rs  hal_display.rs  hal_gpio.rs  hal_platform.h  hal_platform.rs  hal_timer.h  hal_timer.rs  hal_types.h  hal_types.rs  mod.rs
hal/src/: cpu.rs  display.rs  dma.rs  dsi.rs  gpio.rs  hal_cpu.h  (+9 more)
kernel/: Cargo.toml  build.rs  main.c  test_main.c
kernel/src/: main.c  main.rs
memory/: Cargo.toml  README.md  allocator.c  allocator.rs
soc/: mod.rs
ui/: Cargo.toml  README.md  mod.rs
(+191 files in other folders)
