[workspace]
resolver = "2"
members = [
    "common",
    "hal",
    "drivers",
    "memory",
    "ui",
    "kernel",
    "soc/bcm2710",
    "soc/jh7110",
]

# Default members exclude `kernel` because it requires a bare-metal target.
# Build it explicitly:
#   cargo build -p kernel --features board-rpi-zero2w --target aarch64-unknown-none
default-members = [
    "common",
    "hal",
    "drivers",
    "memory",
    "ui",
]

