[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
description = "Tutorial-OS kernel entry point (binary crate)"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
hal     = { path = "../hal" }
common  = { path = "../common" }
drivers = { path = "../drivers" }
memory  = { path = "../memory" }
ui      = { path = "../ui" }

# SoC crates — each is an optional dependency activated by a board feature.
# Uncomment these as SoC crates are implemented:
soc-bcm2710 = { path = "../soc/bcm2710", optional = true }
# soc-bcm2711 = { path = "../soc/bcm2711", optional = true }
# soc-bcm2712 = { path = "../soc/bcm2712", optional = true }
# soc-kyx1    = { path = "../soc/kyx1",    optional = true }
soc-jh7110  = { path = "../soc/jh7110",  optional = true }
# soc-n100    = { path = "../soc/n100",     optional = true }
# soc-n150    = { path = "../soc/n150",     optional = true }

[features]
default = []

# Board features (user-facing — pick one)
board-rpi-zero2w     = ["dep:soc-bcm2710", "arch-arm64"]
# board-rpi-cm4        = ["dep:soc-bcm2711", "arch-arm64"]
# board-rpi5           = ["dep:soc-bcm2712", "arch-arm64"]
# board-orangepi-rv2   = ["dep:soc-kyx1",    "arch-riscv64"]
board-milkv-mars     = ["dep:soc-jh7110",  "arch-riscv64"]
# board-lattepanda-mu  = ["dep:soc-n100",    "arch-x86_64"]
# board-lattepanda-iota = ["dep:soc-n150",   "arch-x86_64"]

# Architecture features (selected by SoC, not directly by user)
arch-arm64   = []
arch-riscv64 = []
arch-x86_64  = []
